--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
       content="Web site created using create-react-app and react router"
     />
     <title>To Do List</title>
+    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
   </head>
   <body>
-    
     <div id="root"></div>
   </body>
 </html>
